[package]
name = "chinese-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.5", features=["macros","form"] }
lazy_static = "1.5.0"
libsql = "0.5.0"
serde = "1.0.207"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-turso = "0.47.0"
tera = "1.20.0"
tokio = "1.28.2"
tower-http = { version="0.5.2", features=["fs"] }
