[package]
name = "chinese-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.4", features=["macros"] }
chrono = "0.4.38"
lazy_static = "1.5.0"
libsql = "0.3.5"
serde = "1.0.207"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-turso = "0.47.0"
tera = "1.20.0"
tokio = { version="1.28.2", features=["full"] }
tower-http = { version="0.5.2", features=["fs"] }
